--- a/index.html
+++ b/index.html
@@ -223,17 +223,19 @@
         <div class="container">
           <div class="row g-1 justify-content-around">
             <div class="col-md-2">
-              <div class="card text-white top-div">
-                <div class="card-body">
-                  <p class="text-capitalize card-title">total jobs applied</p>
-                  <h3 class="fw-bold">45</h3>
+              <div class="card h-100 border-0">
+                <div class="card h-50 text-white top-div">
+                  <div class="card-body">
+                    <p class="text-capitalize card-title">total jobs applied</p>
+                    <h3 class="fw-bold">45</h3>
+                  </div>
                 </div>
-              </div>
 
-              <div class="card  text-white down-div mt-3">
-                <div class="card-body">
-                  <p class="text-capitalize card-title">total jobs applied</p>
-                  <h3 class="fw-bold">45</h3>
+                <div class="card h-50 text-white down-div mt-1">
+                  <div class="card-body">
+                    <p class="text-capitalize card-title">total jobs applied</p>
+                    <h3 class="fw-bold">45</h3>
+                  </div>
                 </div>
               </div>
             </div>
@@ -296,123 +298,112 @@
             </div>
           </div>
         </div>
+
         <div class="container mt-3">
           <div class="row">
             <div class="col-md-12">
               <div class="card h-100">
-                <ul class="list-group list-group-flush">
-                  <div class="d-flex justify-content-between align-items-center">
-                    <li class="list-group-item fw-bold text-capitalize">
-                      Recent Applications History
-                    </li>
-                    <li class="list-group-flush">
+                <div class="card-header bg-transparent">
+                  <nav class="navbar">
+                    <div class="container-fluid">
+                      <a class="navbar-brand">Recent Applications History</a>
                       <a
-                      href=""
-                      class="text-capitalize nav-link a fw-bold p-2 text-end"
-                      >view all application<i class="bi bi-arrow-right ps-3"></i
-                    ></a>
-                    </li>
-                  </div>
-                </ul>
+                        href=""
+                        class="text-capitalize nav-link a fw-bold p-2 text-end"
+                        >view all application<i
+                          class="bi bi-arrow-right ps-3"
+                        ></i
+                      ></a>
+                    </div>
+                  </nav>
+                </div>
                 <div class="card-body">
-                  
-                  <div class="card-header mx-3 my-4 rounded lh-1">
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-md-6">
-                          <div class="">
-                            <div>
-                              <p class="fw-bold">Social Media Assistant</p>
-                              <p class="fw-light text-capitalize">
-                                nomad . paris, france full-time
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-  
-                        <div class="col-md-3">
-                          <p class="fw-bold text-capitalize">date applied</p>
-                          <span class="fw-light text-capitalize"
-                            >24 july 2021</span
-                          >
-                        </div>
-                        <div class="col-md-2">
-                          <button
-                            class="btn text-warning border-warning text-capitalize rounded-pill"
-                          >
-                            in review
-                          </button>
-                        </div>
-                        <div class="col-md-1">
-                          <i class="bi bi-three-dots"></i>
-                        </div>
+                  <div class="card-header border-0">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <span class="fw-bold">Social Media Assistant</span
+                        ><br />
+                        <span class="fw-light text-capitalize">
+                          nomad . paris, france full-time</span
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <span class="fw-bold text-capitalize">date applied</span
+                        ><br />
+                        <span class="fw-light text-capitalize"
+                          >24 july 2021</span
+                        >
+                      </div>
+
+                      <div class="col-md-2">
+                        <button
+                          class="btn text-warning border-warning text-capitalize rounded-pill"
+                        >
+                          in review
+                        </button>
+                      </div>
+                      <div class="col-md-1">
+                        <i class="bi bi-three-dots"></i>
                       </div>
                     </div>
                   </div>
-                  <div class="card-text mx-4 rounded lh-1">
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-md-6">
-                          <div class="d-flex">
-                            <div>
-                              <p class="fw-bold">Social Media Assistant</p>
-                              <p class="fw-light text-capitalize">
-                                nomad . paris, france full-time
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-  
-                        <div class="col-md-3">
-                          <p class="fw-bold text-capitalize">date applied</p>
-                          <span class="fw-light text-capitalize"
-                            >24 july 2021</span
-                          >
-                        </div>
-                        <div class="col-md-2">
-                          <button
-                            class="btn text-warning border-warning text-capitalize rounded-pill"
-                          >
-                            in review
-                          </button>
-                        </div>
-                        <div class="col-md-1">
-                          <i class="bi bi-three-dots"></i>
-                        </div>
+
+                  <div class="card-header bg-transparent border-0">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <span class="fw-bold">Social Media Assistant</span
+                        ><br />
+                        <span class="fw-light text-capitalize">
+                          nomad . paris, france full-time</span
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <span class="fw-bold text-capitalize">date applied</span
+                        ><br />
+                        <span class="fw-light text-capitalize"
+                          >24 july 2021</span
+                        >
+                      </div>
+
+                      <div class="col-md-2">
+                        <button
+                          class="btn text-warning border-warning text-capitalize rounded-pill"
+                        >
+                          in review
+                        </button>
+                      </div>
+                      <div class="col-md-1">
+                        <i class="bi bi-three-dots"></i>
                       </div>
                     </div>
                   </div>
-  
-                  <div class="card-header mx-3 my-4 rounded lh-1">
-                    <div class="container">
-                      <div class="row pt-3">
-                        <div class="col-md-6">
-                          <div class="d-flex">
-                            <div>
-                              <p class="fw-bold">Social Media Assistant</p>
-                              <p class="fw-light text-capitalize">
-                                nomad . paris, france full-time
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-  
-                        <div class="col-md-3">
-                          <p class="fw-bold text-capitalize">date applied</p>
-                          <span class="fw-light text-capitalize"
-                            >24 july 2021</span
-                          >
-                        </div>
-                        <div class="col-md-2">
-                          <button
-                            class="btn text-warning border-warning text-capitalize rounded-pill"
-                          >
-                            in review
-                          </button>
-                        </div>
-                        <div class="col-md-1">
-                          <i class="bi bi-three-dots"></i>
-                        </div>
+
+                  <div class="card-header border-0">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <span class="fw-bold">Social Media Assistant</span
+                        ><br />
+                        <span class="fw-light text-capitalize">
+                          nomad . paris, france full-time</span
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <span class="fw-bold text-capitalize">date applied</span
+                        ><br />
+                        <span class="fw-light text-capitalize"
+                          >24 july 2021</span
+                        >
+                      </div>
+
+                      <div class="col-md-2">
+                        <button
+                          class="btn text-warning border-warning text-capitalize rounded-pill"
+                        >
+                          in review
+                        </button>
+                      </div>
+                      <div class="col-md-1">
+                        <i class="bi bi-three-dots"></i>
                       </div>
                     </div>
                   </div>
@@ -424,7 +415,5 @@
       </main>
     </div>
     <script src="./js/doc.js"></script>
-
-    
   </body>
 </html>
